language-server/src/tests/snapshots/gleam_language_server__tests__rename__rename_function_from_unqualified_reference.snap
---
source: language-server/src/tests/rename.rs
expression: "\nimport mod.{wibble}\n\npub fn main() {\n  wibble()\n  mod.wibble()\n}\n"
---
----- BEFORE RENAME
-- mod.gleam

pub fn wibble() {
  wibble()
}


-- app.gleam

import mod.{wibble}

pub fn main() {
  wibble()
  ↑▔▔▔▔▔  
  mod.wibble()
}


----- AFTER RENAME
-- mod.gleam

pub fn wibble() {
  wibble()
}


-- app.gleam

import mod.{wibble as some_function}

pub fn main() {
  some_function()
  mod.wibble()
}
