language-server/src/tests/snapshots/gleam_language_server__tests__rename__rename_function_shadowed_by_field_access.snap
---
source: language-server/src/tests/rename.rs
expression: "\npub fn something() {\n  todo\n}\n"
---
----- BEFORE RENAME
-- mod.gleam

import app

type App {
  App(something: Int)
}

pub fn main() {
  let app = App(10)
  app.something
}


-- app.gleam

pub fn something() {
       ↑▔▔▔▔▔▔▔▔    
  todo
}


----- AFTER RENAME
-- mod.gleam

import app

type App {
  App(something: Int)
}

pub fn main() {
  let app = App(10)
  app.something
}


-- app.gleam

pub fn function() {
  todo
}
